--- a/src/styles/Startpage.css
+++ b/src/styles/Startpage.css
@@ -54,7 +54,7 @@ span button {
 }
 
 .logo {
-  background-image: url("../assets/title.png");
+  background-image: url("../../public/assets/title.png");
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
