--- a/src/styles/WaitRoom.module.css
+++ b/src/styles/WaitRoom.module.css
@@ -7,17 +7,17 @@
 }
 
 .content {
-  width: 100%;
-  height: 80%;
-  max-width: 1200px;
-  max-height: 762px;
+  width: 1200px;
+  height: 702px;
   margin-left: 30px;
   position: relative;
 }
 
 .main {
-  width: 100%;
-  height: 100%;
+  margin: 0 auto;
+  width: 1400px;
+  height: 800px;
+  display: flex;
 }
 
 .grid_list {
@@ -31,7 +31,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   border: 2px black solid;
-  margin-top: 40px;
+  margin-top: 1%;
 }
 
 .Bbox {
@@ -54,25 +54,62 @@
   background-size: 100% 100%;
 }
 
-.Linkdiv {
-  color: black;
-  background-color: gray;
+.footer_content {
+  flex-direction: column;
+  display: flex;
+  align-items: left;
+  gap: 5px;
   width: 70%;
-  height: 70px;
-  flex-grow: 1;
+  height: 100%;
   margin-left: 20px;
+  justify-content: end;
+}
+
+.Linkdiv {
+  color: white;
+  background-color: black;
+  width: 95%;
+  height: 30px;
+  padding-left: 20px;
+  line-height: 30px;
 }
 
 .footer {
+  position: relative;
   margin-left: 100px;
-  margin-top: 60px;
   width: 80%;
+  height: 120px;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: end;
+  margin-bottom: 100px;
 }
 
 .footer span {
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
+}
+
+.sidebar {
+  display: flex;
+  align-items: end;
+  width: 300px;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 10%;
+}
+
+.paste_div {
+  width: 27px;
+  height: 27px;
+  background-color: white;
+  background-image: url("../../public/assets/Paste.png");
+  background-size: 100% 100%;
+  border: 2px gray solid;
+  border-radius: 3px;
+  margin-left: -15px;
+}
+
+.paste_div:hover {
+  background-color: black;
 }
