--- a/src/styles/WaitRoom.module.css
+++ b/src/styles/WaitRoom.module.css
@@ -103,7 +103,7 @@
   width: 27px;
   height: 27px;
   background-color: white;
-  background-image: url("../../public/assets/Paste.png");
+  background-image: url("../assets/Paste.png");
   background-size: 100% 100%;
   border: 2px gray solid;
   border-radius: 3px;
