--- a/src/styles/Startpage.css
+++ b/src/styles/Startpage.css
@@ -4,7 +4,7 @@
   width: 100px;
   height: 70px;
   cursor: pointer;
-  background-color: white;
+  background-color: unset;
 }
 
 .main {
@@ -17,6 +17,16 @@
   overflow: hidden;
 }
 
+.bg-main {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 49; /* 다른 콘텐츠 뒤에 배치 */
+}
+
 .content {
   height: 100%;
   display: flex;
@@ -24,6 +34,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  z-index: 50;
 }
 
 .title {
