--- a/src/styles/GameRoom.css
+++ b/src/styles/GameRoom.css
@@ -12,3 +12,54 @@
   align-items: center;
   justify-content: center;
 }
+
+.suspect_grid {
+  position: absolute;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr); /* 7열로 구성 */
+  grid-template-rows: repeat(2, auto); /* 2행으로 구성 */
+  gap: 10px; /* 각 박스 사이 간격 */
+  width: 100%; /* 부모 컨테이너에 맞게 확장 */
+  justify-content: center; /* 가로 중앙 정렬 */
+  align-items: center; /* 세로 중앙 정렬 */
+  justify-content: center;
+  align-items: center;
+}
+
+.gird_box {
+  background-color: #f0f0f0; /* 박스 배경색 */
+  border: 1px solid #ccc; /* 박스 테두리 */
+  text-align: center; /* 텍스트 중앙 정렬 */
+  align-items: center;
+  justify-items: center;
+  padding: 2px; /* 내부 여백 */
+  cursor: pointer; /* 클릭 가능 표시 */
+  transition: background-color 0.3s ease;
+  width: 60px;
+  height: 90px;
+  margin: 0;
+}
+
+.suspect_main_box {
+  width: 500px;
+  height: 200px;
+}
+
+.gird_box img {
+  width: 100%;
+  height: 100%;
+}
+
+.gird_box:hover {
+  opacity: 20%;
+}
+
+.suspect:hover {
+  background-color: #e0e0e0; /* 호버 시 배경색 변경 */
+  color: black;
+}
+
+.suspect {
+  background-color: black;
+  color: #fff;
+}
